--- a/app/ladder/templates/ladder/player_detail.html
+++ b/app/ladder/templates/ladder/player_detail.html
@@ -64,10 +64,12 @@
             <table class="table table-borderless">
                 <thead>
                     <tr>
-                        <th class="col-xs-4">Event</th>
-                        <th class="col-xs-2">Score</th>
-                        <th class="col-xs-3">Score change</th>
-                        <th class="col-xs-3">Additional info</th>
+                        <th class="col-xs-2">Event</th>
+                        <th class="col-xs-1">Score</th>
+                        <th class="col-xs-2">Score change</th>
+                        <th class="col-xs-1">Ladder MMR</th>
+                        <th class="col-xs-2">MMR change</th>
+                        <th class="col-xs-2">Additional info</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -97,6 +99,14 @@
 
                         <td>
                            {{ event.amount|stringformat:'+d' }}
+                        </td>
+
+                        <td>
+                            {{ event.mmr }}
+                        </td>
+
+                        <td>
+                           {{ event.mmr_change|stringformat:'+d' }}
                         </td>
 
                         <td>
