#7 a lot of work on ladder-mmr

--- a/app/ladder/templates/ladder/player_list.html
+++ b/app/ladder/templates/ladder/player_list.html
@@ -30,7 +30,8 @@
                     <th class="cell-centered">Rank</th>
                     <th class="col-xs-4">Player</th>
                     <th class="col-xs-2">Score</th>
-                    <th class="col-xs-3">MMR</th>
+                    <th class="col-xs-1">MMR</th>
+                    <th class="col-xs-2">Ladder MMR</th>
                     <th class="col-xs-2">Matches </th>
                 </tr>
             </thead>
@@ -69,6 +70,12 @@
                         {{ player.mmr }}
                         <div class="color-bar">
                             <div class="mmr" style="width: {{ player.mmr_percent }}%"></div>
+                        </div>
+                    </td>
+                    <td>
+                        {{ player.ladder_mmr }}
+                        <div class="color-bar">
+                            <div class="mmr" style="width: {{ player.ladder_mmr_percent }}%"></div>
                         </div>
                     </td>
                     <td>
