--- a/app/ladder/templates/ladder/player_detail.html
+++ b/app/ladder/templates/ladder/player_detail.html
@@ -57,6 +57,12 @@
         </div>
     </div>
 
+    {% if player.name == 'Ulafzs' %}
+        <div class="test-winner">
+            Day 1 winner!
+        </div>
+    {% endif %}
+
     <section>
     <header> Score history </header>
     <article>
