--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
             <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
             <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
             <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.3/jquery.timeago.min.js"></script>
+            <script src="{% static 'js/base.js' %}"></script>
         {% endblock common_scripts %}
 
         {% block common_styles %}
