--- a/app/ladder/templates/ladder/player_detail.html
+++ b/app/ladder/templates/ladder/player_detail.html
@@ -21,7 +21,7 @@
             </div>
             <div class="page-overview-title">
                 <h1> {{ player.name }}
-                    <small class="country">({{ player.country }}Nigeria)</small>
+                    <small class="country">{{ player.country }}</small>  {# TODO: fill it #}
                     <small>{% block player-page-title %}Overview{% endblock %}</small>
                 </h1>
             </div>
