--- a/app/ladder/static/ladder/css/ladder.css
+++ b/app/ladder/static/ladder/css/ladder.css
@@ -68,3 +68,8 @@ div.test-winner {
     margin-top: -7px;
     border-bottom-color: white;
 }
+
+.winrate-img {
+    width: 25px;
+    height: 25px;
+}
