#10 polishing second leaderboard looks

--- a/app/ladder/templates/ladder/player_list.html
+++ b/app/ladder/templates/ladder/player_list.html
@@ -4,6 +4,7 @@
 {% block page_scripts %}
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.0/js/jquery.tablesorter.js"></script>
     <script src="{% static 'ladder/js/ladder.js' %}"></script>
+    <script src="{% static 'ladder/js/player_list.js' %}"></script>
 {% endblock page_scripts %}
 
 {% block page_styles %}
