--- a/app/ladder/templates/ladder/player_list_score.html
+++ b/app/ladder/templates/ladder/player_list_score.html
@@ -1,6 +1,12 @@
 {% extends "ladder/player_list.html" %}
 {% load staticfiles %}
 
+{% block page_scripts %}
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.28.0/js/jquery.tablesorter.js"></script>
+    <script src="{% static 'ladder/js/ladder.js' %}"></script>
+    <script src="{% static 'ladder/js/player_list_score.js' %}"></script>
+{% endblock page_scripts %}
+
 {% block player-page-title %} {% endblock %}
 
 {% block player-list-content %}
