#11 more stats on Teammates page

--- a/app/ladder/templates/ladder/player_list.html
+++ b/app/ladder/templates/ladder/player_list.html
@@ -115,7 +115,7 @@
                         {% endif %}
 
                         <div class="color-bar">
-                            <div class="" style="width: {{ player.winrate }}%"></div>
+                            <div class="winrate" style="width: {{ player.winrate }}%"></div>
                         </div>
                     </td>
                 </tr>
