--- a/app/ladder/templates/ladder/player_list.html
+++ b/app/ladder/templates/ladder/player_list.html
@@ -21,6 +21,13 @@
             </h1>
         </div>
     </div>
+
+    <div class="page-overview-secondary">
+        <dl>
+            <dd>{{ matches_count }}</dd>
+            <dt>Matches</dt>
+        </dl>
+    </div>
 </div>
 
 <div class="page-menu">
