--- a/app/ladder/templates/ladder/player_detail.html
+++ b/app/ladder/templates/ladder/player_detail.html
@@ -66,6 +66,7 @@
     <div class="page-menu">
         {% url 'ladder:player-overview' player.slug as player_score_url %}
         {% url 'ladder:player-teammates' player.slug as player_teammates_url %}
+        {% url 'ladder:player-opponents' player.slug as player_opponents_url %}
 
         <nav class="menu-links">
             {% with request.resolver_match.url_name as page %}
@@ -75,6 +76,9 @@
 
                 <li class="{% if page == 'player-teammates' %}active{% endif %}">
                     <a href="{{ player_teammates_url }}">Teammates</a></li>
+
+                <li class="{% if page == 'player-opponents' %}active{% endif %}">
+                    <a href="{{ player_opponents_url }}">Opponents</a></li>
             </ul>
             {% endwith %}
         </nav>
