--- a/app/ladder/templates/ladder/player_opponents.html
+++ b/app/ladder/templates/ladder/player_opponents.html
@@ -7,7 +7,7 @@
     <script src="{% static 'ladder/js/player_teammates.js' %}"></script>
 {% endblock page_scripts %}
 
-{% block player-page-title %}Teammates{% endblock %}
+{% block player-page-title %}Opponents{% endblock %}
 
 {% block player-content %}
 
@@ -26,16 +26,16 @@
             </thead>
             <tbody>
             {% for teammate in teammates %}
-                {% url 'ladder:player-teammates' teammate.name|slugify as teammate_url %}
+                {% url 'ladder:player-opponents' teammate.name|slugify as opponent_url %}
 
-                <tr class="match-row" data-link="{{ teammate_url }}">
+                <tr class="match-row" data-link="{{ opponent_url }}">
                     <td>
                         <div class="avatar">
-                            <a href="{{ teammate_url }}">
+                            <a href="{{ opponent_url }}">
                                 <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/60/6009ebd5640bed7c75004558733d63493ff2eaf8_full.jpg">
                             </a>
                         </div>
-                        <a href="{{ teammate_url }}"> {{ teammate.name }} </a>
+                        <a href="{{ opponent_url }}"> {{ teammate.name }} </a>
                             <div class="subtext">
                                 <time class="timeago"
                                       datetime="{{ teammate.last_played|date:'c' }}"
