#11 refactored Teammates and Opponents templates

--- a/app/ladder/templates/ladder/player_list.html
+++ b/app/ladder/templates/ladder/player_list.html
@@ -49,7 +49,7 @@
                 <tr>
                     <th class="cell-centered">Rank <span class="sort-arrow"></span></th>
                     <th class="col-xs-3">Player <span class="sort-arrow"></span></th>
-                    <th class="col-xs-2 tablesorter-headerDesc">Ladder MMR <span class="sort-arrow"></span></th>
+                    <th class="col-xs-2">Ladder MMR <span class="sort-arrow"></span></th>
                     <th class="col-xs-2">Dota MMR <span class="sort-arrow"></span></th>
                     <th class="col-xs-2">Matches <span class="sort-arrow"></span></th>
                     <th class="col-xs-2">Winrate <span class="sort-arrow"></span></th>
