--- a/app/ladder/templates/ladder/player_list_score.html
+++ b/app/ladder/templates/ladder/player_list_score.html
@@ -16,7 +16,7 @@
         <thead>
             <tr>
                 <th class="col-xs-3">Player <span class="sort-arrow"></span></th>
-                <th class="col-xs-2 tablesorter-headerDesc">Score <span class="sort-arrow"></span></th>
+                <th class="col-xs-2">Score <span class="sort-arrow"></span></th>
                 <th class="col-xs-2">Wins <span class="sort-arrow"></span></th>
                 <th class="col-xs-2">Losses <span class="sort-arrow"></span></th>
                 <th class="col-xs-2">Ladder MMR <span class="sort-arrow"></span></th>
