--- a/app/ladder/templates/ladder/player_teammates.html
+++ b/app/ladder/templates/ladder/player_teammates.html
@@ -13,63 +13,7 @@
 
 <section>
 <article>
-    <div class="table-responsive table-borderless">
-        <table class="table table-borderless tablesorter">
-            <thead>
-                <tr>
-                    <th class="col-xs-3">Player <span class="sort-arrow"></span></th>
-                    <th class="col-xs-2 tablesorter-headerDesc">MMR change <span class="sort-arrow"></span></th>
-                    <th class="col-xs-2">Score change <span class="sort-arrow"></span></th>
-                    <th class="col-xs-2">Matches <span class="sort-arrow"></span></th>
-                    <th class="col-xs-3">Winrate <span class="sort-arrow"></span></th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for teammate in teammates %}
-                {% url 'ladder:player-teammates' teammate.name|slugify as teammate_url %}
-
-                <tr class="match-row" data-link="{{ teammate_url }}">
-                    <td>
-                        <div class="avatar">
-                            <a href="{{ teammate_url }}">
-                                <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/60/6009ebd5640bed7c75004558733d63493ff2eaf8_full.jpg">
-                            </a>
-                        </div>
-                        <a href="{{ teammate_url }}"> {{ teammate.name }} </a>
-                            <div class="subtext">
-                                <time class="timeago"
-                                      datetime="{{ teammate.last_played|date:'c' }}"
-                                      title="{{ teammate.last_played }}">
-                                    {{ teammate.last_played|date:'c'|default:'-' }}
-                                {{ teammate.last_played }}
-                                </time>
-                            </div>
-                    </td>
-
-                    <td>
-                        {{ teammate.mmr_change|stringformat:'+d' }}
-                    </td>
-                    <td>
-                       {{ teammate.score_change|stringformat:'+d' }}
-                    </td>
-
-                    <td>
-                    {{ teammate.match_count }}
-                    <div class="color-bar">
-                        <div class="matches" style="width: {{ teammate.matches_percent }}%"></div>
-                    </div>
-                </td>
-                <td>
-                    {{ teammate.winrate|floatformat:2 }}%
-                    <div class="color-bar">
-                        <div class="winrate" style="width: {{ teammate.winrate }}%"></div>
-                    </div>
-                </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
+    {% include 'ladder/player_teammates_table.html' %}
 </article>
 </section>
 
